# VIL-Project-AMR

./: .gitignore  README.md
amr_segmentation/: README.md  package.xml  setup.cfg  setup.py
amr_segmentation/amr_segmentation/: __init__.py  pointcloud_painter_node.py  segmentation_common.py  segmentation_node.py  semantic_merger_node.py
amr_segmentation/config/: pipeline_params.yaml
amr_segmentation/launch/: infer_segmentation.launch.py
amr_segmentation/models/: README.md
amr_segmentation/scripts/: benchmark_infer.py  infer_video.py
benchmark/: README.md  test_full_pipeline.py  test_monitor.py  test_pipeline.py
cloud_merger/: CMakeLists.txt  README.md  package.xml
cloud_merger/launch/: cloud_merger.launch.py
cloud_merger/param/: cloud_merger.yaml
cloud_merger/src/: cloud_merger_node.cpp
docker/: README.md  cyclonedds.xml  monitor.rviz  run_jazzy.sh
docs/: Network.md  TroubleShooting.md  run_jazzy.sh
docs/tf/: frames_2026-02-25_05.53.18.gv
fast_lio/: CMakeLists.txt  README.md  package.xml
fast_lio/config/: m300.yaml  m300_backup.yaml
fast_lio/launch/: mapping.launch.py
fast_lio/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
groundgrid/: CMakeLists.txt  README.md  package.xml
groundgrid/include/groundgrid/: GroundGrid.hpp
groundgrid/launch/: amr_groundgrid.launch.py
groundgrid/param/: m300.yaml
groundgrid/src/: GroundGridNode.cpp
lio_nav_bringup/: CMakeLists.txt  package.xml
lio_nav_bringup/launch/: bringup.launch.py
lx_camera_ros/: CMakeLists.txt  README.md  package.xml
lx_camera_ros/launch/: lx_camera_ros.launch.py
lx_camera_ros/sdk/: install.sh
lx_camera_ros/src/lx_camera/: lx_camera.cpp  lx_camera.h
omorobot/omorobot_bringup/: package.xml  setup.py
omorobot/omorobot_bringup/launch/: bringup_launch.py
omorobot/omorobot_description/urdf/: DONKEYBOTI.urdf
omorobot/omorobot_robot/omorobot_robot/: packet_handler.py  robot_control.py
omorobot/omorobot_robot/param/: DONKEYBOTI.yaml
pacecat_m300/: README.md
pacecat_m300/pacecat_m300_driver/: CMakeLists.txt
pacecat_m300/pacecat_m300_driver/params/: LDS-M300-E.yaml
pacecat_m300/pacecat_m300_driver/sdk/: global.h  pacecatlidarsdk.cpp  pacecatlidarsdk.h  upgrade.cpp
pacecat_m300/pacecat_m300_driver/src/: driver.cpp
path_planner/: CMakeLists.txt  README.md  package.xml
path_planner/launch/: path_planner.launch.py
path_planner/param/: path_planner.yaml
path_planner/src/: path_planner_node.cpp
terrain_costmap/: CMakeLists.txt  README.md  package.xml
terrain_costmap/launch/: terrain_costmap.launch.py
terrain_costmap/param/: terrain_costmap.yaml
terrain_costmap/src/: terrain_costmap_node.cpp
