<?xml version="1.0"?>
<package format="3">
  <name>cloud_merger</name>
  <version>1.0.0</version>
  <description>Merges M300 LiDAR and S10 Ultra camera point clouds for GroundGrid</description>
  <maintainer email="dev@amr.local">AMR</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>pcl_conversions</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
