<?xml version="1.0"?>
<package format="3">
    <name>groundgrid</name>
    <version>0.0.1</version>
    <description>GroundGrid: LiDAR Point Cloud Ground Segmentation and Terrain Estimation</description>
    <maintainer email="n.steinke@fu-berlin.de">Autonomos-Labs, FU Berlin</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>

    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_visualization</depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>pluginlib</depend>
    <depend>filters</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>