<?xml version="1.0"?>
<package format="3">
  <name>lio_nav_bringup</name>
  <version>1.0.0</version>
  <description>AMR launch — FAST-LIO2 + GroundGrid + DONKEYBOTI bringup</description>
  <maintainer email="dev@amr.local">AMR</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>groundgrid</exec_depend>
  <exec_depend>pacecat_m300_driver</exec_depend>
  <exec_depend>omorobot_robot</exec_depend>
  <exec_depend>omorobot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
