<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planner</name>
  <version>1.0.0</version>
  <description>
    A* global + DWA local planner for DONKEYBOTI caterpillar robot.
    5mx5m OccupancyGrid input, cmd_vel output. Turn-in-place support.
  </description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
