<?xml version="1.0"?>
<package format="3">
  <name>terrain_costmap</name>
  <version>1.0.0</version>
  <description>
    Generates a robot-centric traversability costmap from GroundGrid output.
    Computes cost from obstacle density, slope, surface roughness, and
    observation confidence. Includes persistent terrain accumulation
    for sensor blind-spot compensation.
  </description>
  <maintainer email="dev@amr.local">AMR</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>